// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncomingPaymentRequestSummaryNotification renders a number when the address mapping is cached 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "width": "100%",
          },
          Object {
            "elevation": 2,
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 1.6,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "paddingRight": 16,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "backgroundColor": "#FEB45E",
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
                    }
                  }
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 14,
                  "lineHeight": 18,
                }
              }
              testID="IncomingPaymentRequestNotification/FAKE_ID_1/Title"
            >
              +14155550000
               requested
               
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                266,000.00
              </Text>
            </Text>
            <View
              style={
                Object {
                  "justifyContent": "space-between",
                  "minHeight": 60,
                  "paddingTop": 2,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  }
                }
              >
                Dinner for me and the gals, PIZZAA!
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "marginTop": 12,
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  testID="IncomingPaymentRequestNotification/FAKE_ID_1/global:pay/Button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#42D689",
                          "fontFamily": "Hind-SemiBold",
                          "fontSize": 14,
                          "lineHeight": 18,
                        },
                        Object {
                          "paddingEnd": 15,
                        },
                      ]
                    }
                  >
                    global:pay
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  testID="IncomingPaymentRequestNotification/FAKE_ID_1/global:decline/Button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#42D689",
                          "fontFamily": "Hind-SemiBold",
                          "fontSize": 14,
                          "lineHeight": 18,
                        },
                        Object {
                          "paddingEnd": 15,
                        },
                      ]
                    }
                  >
                    global:decline
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`IncomingPaymentRequestSummaryNotification renders correctly for just one alone 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "width": "100%",
          },
          Object {
            "elevation": 2,
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 1.6,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "paddingRight": 16,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "backgroundColor": "#FEB45E",
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
                    }
                  }
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 14,
                  "lineHeight": 18,
                }
              }
              testID="IncomingPaymentRequestNotification/FAKE_ID_1/Title"
            >
              +14155550000
               requested
               
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                266,000.00
              </Text>
            </Text>
            <View
              style={
                Object {
                  "justifyContent": "space-between",
                  "minHeight": 60,
                  "paddingTop": 2,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  }
                }
              >
                Dinner for me and the gals, PIZZAA!
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "marginTop": 12,
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  testID="IncomingPaymentRequestNotification/FAKE_ID_1/global:pay/Button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#42D689",
                          "fontFamily": "Hind-SemiBold",
                          "fontSize": 14,
                          "lineHeight": 18,
                        },
                        Object {
                          "paddingEnd": 15,
                        },
                      ]
                    }
                  >
                    global:pay
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  testID="IncomingPaymentRequestNotification/FAKE_ID_1/global:decline/Button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#42D689",
                          "fontFamily": "Hind-SemiBold",
                          "fontSize": 14,
                          "lineHeight": 18,
                        },
                        Object {
                          "paddingEnd": 15,
                        },
                      ]
                    }
                  >
                    global:decline
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`IncomingPaymentRequestSummaryNotification renders correctly for more than one request 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 16,
          "width": "100%",
        },
        Object {
          "elevation": 2,
          "shadowColor": "black",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1.6,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "paddingRight": 16,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/send-dollar.png",
          }
        }
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Bold",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
      >
        incomingPaymentRequests
      </Text>
      <View
        style={
          Object {
            "justifyContent": "space-between",
            "minHeight": 60,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#81868B",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                  }
                }
              >
                +14155550000
                 for 
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                
                $
                266,000.00
              </Text>
            </Text>
            <View>
              <Text
                style={
                  Object {
                    "color": "#81868B",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                  }
                }
              >
                global:moreWithCount
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "paddingEnd": 15,
                  },
                ]
              }
            >
              walletFlow5:review
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
